--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PrivateResource">
     <string name="app_name">DevDash</string>
+    <string name="backlog">Backlog</string>
+    <string name="to_do">To Do</string>
+    <string name="in_progress">In Progress</string>
+    <string name="reviewing">Reviewing</string>
+    <string name="completed">Completed</string>
+    <string name="canceled">Canceled</string>
+    <string name="postponed">Postponed</string>
 </resources>
